--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,4 @@ Project/Project Images/Data.png
 Project/Project Images/Histograms.png
 Project/Project Images/Summary Stats1.png
 Project/Project Images/Summary Stats2.png
+categorized-comments.jsonl
